k8s-yaml/demo/k8s.yaml
################## START SERVICES ##############
apiVersion: v1
kind: Service
metadata:
  name: gateway-cip-service
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-web-cip-service
spec:
  type: ClusterIP
  selector:
    app: frontend-web
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: coreapi-cip-service
spec:
  type: ClusterIP
  selector:
    app: coreapi
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: redis-server-service
spec:
  type: ClusterIP
  selector:
    app: redis-server
  ports:
    - port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: ClusterIP
  selector:
    app: calculator
  ports:
    - port: 8080
      targetPort: 8080

---

################## START DEPLOYMENTS ##############

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
        - name: redis-server
          image: vimazac/redis-server
          imagePullPolicy: Always
          ports:
            - containerPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapi
  template:
    metadata:
      labels:
        app: coreapi
    spec:
      containers:
        - name: coreapi
          image: vimazac/core-msrv
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: vimazac/calculator
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-dep
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway # name other config will use to refer this pod
    spec:
      containers:
        - name: gateway # internal name assigned to this container.
          image: vimazac/gateway:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels: 
        app: frontend-web # this is the important one. Everyone has to refer to this one
    spec: # everything belows here is the description of the pod
      imagePullSecrets:
        - name : regcred
      containers:
        - name: frontend-web
          image: vimazac/light-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
