k8s-yaml/demo/temp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web-cip-service
spec:
  type: LoadBalancer
  selector:
    app: frontend-web
  ports:
    - port: 80
      targetPort: 80
